--- a/src/components/LoginForm/form.css
+++ b/src/components/LoginForm/form.css
@@ -1,65 +1,34 @@
 /* @Form*/
 
 .login__form {
-  height: 47vh;
-  width: 350px;
+  margin-top: -150px;
+
   margin-left: 25px;
-  border: 1px solid rgba(117, 111, 111, 0.5);
+  border: 1px solid rgba(117, 111, 111, 0.2);
   background-color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-/* @Input*/
-
-.field {
-  position: relative;
-  margin-bottom: 10px;
-  margin-left: 15px;
-  width: 15vw;
+/* @Login Facebook*/
+.login__icon {
+  display: flex;
+  align-items: center;
+  margin-bottom: 25px;
+  cursor: pointer;
 }
 
-.field label::before {
-  content: attr(title);
-  position: absolute;
-  top: 0;
-  left: 15px;
-  line-height: 40px;
+.login__text {
+  margin-left: 8px;
+  color: #3b5998;
+  font-size: 14px;
+  font-weight: 700;
+}
+
+.login__password {
   font-size: 12px;
-  color: #777;
-  transition: 300ms all;
-}
-
-.field input {
-  width: 100%;
-  line-height: 40px;
-  padding: 0 15px;
-  box-sizing: border-box;
-  font-size: 12px;
-  color: #222;
-  background-color: rgba(251, 251, 251, 1);
-  border: 1px solid #ccc;
-  border-radius: 3px;
-  margin-bottom: 3px;
-}
-
-.field input:focus {
-  outline: 0;
-}
-
-.field input:valid + label::before {
-  line-height: 20px;
-  font-size: 12px;
-  padding: 0 6px;
-  left: 9px;
-  content: attr(data-title);
-}
-
-.field input:focus + label::before {
-  line-height: 20px;
-  font-size: 12px;
-  bottom: 30px;
-  padding: 0 6px;
-  left: 9px;
+  margin-bottom: 25px;
+  text-align: center;
+  cursor: pointer;
 }
