add: error style

--- a/src/components/Error/error.css
+++ b/src/components/Error/error.css
@@ -15,7 +15,8 @@
 .error__page {
   background-image: url(https://cdn.dribbble.com/users/285475/screenshots/2083086/dribbble_1.gif);
   height: 400px;
-
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .error__page h1 {
